<resources>
    <string name="title_activity_maps">Map</string>
    <string name="app_name">CRACC</string>
    <string name="login">Login</string>
    <string name="login_app">CRACC</string>
    <string name="app_id">CRACC</string>

    <string name="login_google_buttom">LOGIN WITH GOOGLE</string>
    <string name="login_facebook_buttom">LOGIN WITH FACEBOOK</string>

    <string name="email">&#032;Email&#8230;</string>
    <string name="password">&#032;Password&#8230;</string>
    <string name="loginmessage">login with email</string>
    <string name="creatnewaccount"><u>Creat new account</u></string>
    <string name="forgot"><u>Forgot password</u></string>

    <string name="createnewgame">Create new game</string>
    <string name="information">information</string>
    <string name="crown">Best players</string>
    <string name="interested">interested</string>
    <string name="gamemanagement">Game management</string>
    <string name="community">Community</string>
    <string name="logout">Log out</string>
    <string name="name">Chao Chi Cheng</string>
    <string name="creategame">Create a Game</string>
    <string name="gamename">Name</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="numpeople">Number of people</string>
    <string name="createage">Age</string>
    <string name="gender">Gender</string>


    <string name="age">Age:</string>
    <string name="lastgame">Last game played:</string>
    <string name="play">played:</string>
    <string name="canceled">Canceled:</string>
    <string name="comment">Comment</string>
    <string name="interestedot">•interested</string>
    <string name="setting">Setting</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="newpassword">New password&#8230;</string>
    <string name="confirmnewpassword">Confirm New Password&#8230;</string>
    <string name="forgetpassword">Forget password</string>
    <string name="sendcode">Send Code</string>
    <string name="loginhere"><u>or login here</u></string>
    <string name="createaccount">Create accoount</string>
    <string name="profileimage">Profile image</string>
    <string name="next">Next</string>
    <string name="birthday">Birthday</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="back"><u>Back</u></string>
    <string name="signup">Sign Up</string>

    <string name="facebook_app_id">138833836753669</string>
    <string name="fb_login_protocol_scheme">fb138833836753669</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
