<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <FrameLayout
        android:id="@+id/createaccountframe1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/testbackground1"
        android:backgroundTint="#30000000"
        android:backgroundTintMode="src_over"
        android:onClick="empty1">

        <android.support.percent.PercentRelativeLayout
            android:id="@+id/createaccountlayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <android.support.percent.PercentRelativeLayout
                android:id="@+id/createaccountmessagelayout"
                android:layout_width="match_parent"
                android:layout_height="25sp"
                app:layout_marginTopPercent="8%"
                >
                <TextView
                    android:id="@+id/createaccountmessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/createaccount"
                    android:textColor="#FFFFFF"
                    android:layout_centerHorizontal="true"
                    android:textSize="20sp"
                    />

                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/informationcommentline1"
                    android:background="#FFFFFF"
                    android:layout_height="1dp"
                    app:layout_widthPercent="25%"
                    android:layout_toEndOf="@+id/createaccountmessage"
                    app:layout_marginLeftPercent="2%"
                    android:layout_centerVertical="true"
                    />
                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/informationcommentline2"
                    android:background="#FFFFFF"
                    android:layout_height="1dp"
                    app:layout_widthPercent="25%"
                    android:layout_toStartOf="@+id/createaccountmessage"
                    app:layout_marginRightPercent="2%"
                    android:layout_centerVertical="true"
                    />
            </android.support.percent.PercentRelativeLayout>

            <Button
                android:id="@+id/profileimage"
                app:layout_widthPercent="30%"
                app:layout_aspectRatio="100%"
                app:layout_marginTopPercent="3%"
                android:layout_below="@id/createaccountmessagelayout"
                android:layout_centerHorizontal="true"
                android:background="@drawable/profileicon"
                android:textAllCaps="false"
                android:text="@string/profileimage"
                android:textSize="20sp"
                android:onClick="getPicture"
                />


            <EditText
                android:id="@+id/createaccountfirstname"
                app:layout_widthPercent="40%"
                app:layout_aspectRatio="450%"
                android:layout_alignParentStart="true"
                android:layout_below="@id/profileimage"
                app:layout_marginLeftPercent="7%"
                app:layout_marginTopPercent="3%"
                android:ems="7"
                android:hint="@string/firstname"
                android:textColorHint="#66000000"
                android:textColor="#000000"
                android:background="@drawable/typeinbox"
                android:paddingStart="10sp"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/createaccountlastname"
                app:layout_widthPercent="40%"
                app:layout_aspectRatio="450%"
                app:layout_marginRightPercent="7%"
                android:layout_below="@id/profileimage"
                app:layout_marginTopPercent="3%"
                android:layout_alignParentEnd="true"
                android:ems="7"
                android:hint="@string/lastname"
                android:textColorHint="#66000000"
                android:textColor="#000000"
                android:background="@drawable/typeinbox"
                android:paddingStart="10sp"
                android:inputType="textCapWords" />

            <Button
                android:id="@+id/createaccountnext"
                app:layout_widthPercent="45%"
                app:layout_aspectRatio="300%"
                app:layout_marginTopPercent="3%"
                android:layout_below="@id/createaccountfirstname"
                android:layout_centerHorizontal="true"
                android:background="@drawable/loginbuttom"
                android:textAllCaps="false"
                android:text="@string/next"
                android:textSize="27sp"
                android:onClick="createaccount2"
                />

            <Button
                android:id="@+id/createaccountlogin"
                android:layout_below="@id/createaccountnext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:textAllCaps="false"
                android:text="@string/loginhere"
                android:layout_centerHorizontal="true"
                android:textSize="16sp"
                android:onClick="loginpage"
                />






        </android.support.percent.PercentRelativeLayout>

    </FrameLayout>

</android.support.percent.PercentRelativeLayout>