<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cracc.cracc2.MainActivity"
    android:background="@drawable/testbackground1"
    android:backgroundTint="#30000000"
    android:backgroundTintMode="src_over"
    android:id="@+id/mainpage">






    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        app:layout_widthPercent="30%"
        app:layout_heightPercent="20%"
        app:layout_marginTopPercent="7%"
        app:layout_marginLeftPercent="35%"
        android:gravity="center"
        android:id="@+id/logolayout">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/cracc"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <TextView
        android:id="@+id/frontword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_app"
        android:textColor="#FFFFFF"
        android:layout_below="@id/logolayout"
        android:gravity="center_horizontal"
        android:textSize="40sp"
        />


        <android.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/frontword"
            app:layout_marginTopPercent="0%"
            android:gravity="center"
            android:id="@+id/loginmessagelayout"
            >




        <TextView
            android:id="@+id/loginmessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginmessage"
            android:textColor="#FFFFFF"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/informationcommentline1"
            android:background="#FFFFFF"
            android:layout_height="3dp"
            app:layout_widthPercent="25%"
            android:layout_toEndOf="@+id/loginmessage"
            app:layout_marginLeftPercent="2%"
            android:layout_centerVertical="true"
            />
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/informationcommentline2"
            android:background="#FFFFFF"
            android:layout_height="3dp"
            app:layout_widthPercent="25%"
            android:layout_toStartOf="@+id/loginmessage"
            app:layout_marginRightPercent="2%"
            android:layout_centerVertical="true"
            />



    </android.support.percent.PercentRelativeLayout>



    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        app:layout_widthPercent="76%"
        app:layout_heightPercent="4%"
        android:layout_below="@id/loginmessagelayout"
        app:layout_marginTopPercent="1%"
        app:layout_marginLeftPercent="12%"
        android:id="@+id/loginemaillayout">


        <EditText
            android:id="@+id/loginemail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="7"
            android:hint="@string/email"
            android:textColorHint="#66000000"
            android:textColor="#000000"
            android:background="@drawable/typeinbox"
            android:paddingStart="10sp"
            android:inputType="textEmailAddress"
            />

    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        app:layout_widthPercent="76%"
        app:layout_heightPercent="4%"
        android:layout_below="@id/loginemaillayout"
        app:layout_marginTopPercent="1%"
        app:layout_marginLeftPercent="12%"
        android:id="@+id/loginepasswordlayout">

        <EditText
            android:id="@+id/loginpass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="7"
            android:hint="@string/password"
            android:textColorHint="#66000000"
            android:textColor="#000000"
            android:paddingStart="10sp"
            android:background="@drawable/typeinbox"
            android:inputType="textPassword"
            />


    </RelativeLayout>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        app:layout_widthPercent="40%"
        app:layout_heightPercent="8%"
        android:layout_below="@id/loginepasswordlayout"
        app:layout_marginTopPercent="1.5%"
        app:layout_marginLeftPercent="30%"
        android:id="@+id/loginlayout">



        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/loginbuttom"
            android:textAllCaps="false"
            android:text="@string/login"
            android:textSize="27sp"
            android:onClick="mainpage"
            />

    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        app:layout_widthPercent="70%"
        app:layout_heightPercent="9.5%"
        android:layout_below="@id/loginlayout"
        app:layout_marginTopPercent="1.5%"
        app:layout_marginLeftPercent="15%"
        android:id="@+id/facebookloginlayout">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/btn_facebook_signup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/login_facebook"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/facebookbuttom"
            android:text="@string/login_facebook_buttom"
            android:onClick="facebookclick"
            />

    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        app:layout_widthPercent="70%"
        app:layout_heightPercent="9.5%"
        android:layout_below="@id/facebookloginlayout"
        app:layout_marginTopPercent="1%"
        app:layout_marginLeftPercent="15%"
        android:id="@+id/googleloginlayout">



        <Button
            android:id="@+id/login_google"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/googlebuttom"
            android:text="@string/login_google_buttom"
            android:onClick="googlesignin"
            />

    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/googleloginlayout"
        android:gravity="center"
        android:id="@+id/creatnewaccountlayout">


        <Button
            android:id="@+id/creatnewaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:background="#00000000"
            android:text="@string/creatnewaccount"
            android:gravity="center"
            android:textSize="16sp"
            android:onClick="createaccount1"
            />

    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/creatnewaccountlayout"
        android:gravity="center"
        android:id="@+id/forgotlayout">

        <Button
            android:id="@+id/forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:textAllCaps="false"
            android:text="@string/forgot"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:onClick="forgetpassword"
            />


    </RelativeLayout>

    <include
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/forgotpassword" />

    <include
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/createnewaccount" />
    <include
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/createnewaccount2" />
    <include
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/createnewaccount3" />
    <include
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/createaccoutgoogle" />

</android.support.percent.PercentRelativeLayout>
