<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <FrameLayout
        android:id="@+id/createaccountframe3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/testbackground1"
        android:backgroundTint="#30000000"
        android:backgroundTintMode="src_over"
        android:onClick="empty1">

        <android.support.percent.PercentRelativeLayout
            android:id="@+id/createaccountlayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <android.support.percent.PercentRelativeLayout
                android:id="@+id/createaccountmessagelayout3"
                android:layout_width="match_parent"
                android:layout_height="25sp"
                app:layout_marginTopPercent="8%"
                >
                <TextView
                    android:id="@+id/createaccountmessage3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/createaccount"
                    android:textColor="#FFFFFF"
                    android:layout_centerHorizontal="true"
                    android:textSize="20sp"
                    />

                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:background="#FFFFFF"
                    android:layout_height="1dp"
                    app:layout_widthPercent="25%"
                    android:layout_toEndOf="@+id/createaccountmessage3"
                    app:layout_marginLeftPercent="2%"
                    android:layout_centerVertical="true"
                    />
                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:background="#FFFFFF"
                    android:layout_height="1dp"
                    app:layout_widthPercent="25%"
                    android:layout_toStartOf="@+id/createaccountmessage3"
                    app:layout_marginRightPercent="2%"
                    android:layout_centerVertical="true"
                    />
            </android.support.percent.PercentRelativeLayout>



            <EditText
                android:id="@+id/createaccount3email"
                android:layout_below="@id/createaccountmessagelayout3"
                android:background="@drawable/typeinbox"
                android:ems="7"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="10sp"
                android:textColor="#000000"
                android:textColorHint="#66000000"
                app:layout_widthPercent="80%"
                app:layout_aspectRatio="914%"
                android:layout_centerHorizontal="true"
                app:layout_marginTopPercent="4%"
                android:imeOptions="actionNext"/>
            <EditText
                android:id="@+id/createaccount3password"
                android:layout_below="@id/createaccount3email"
                android:background="@drawable/typeinbox"
                android:ems="7"
                android:hint="@string/newpassword"
                android:inputType="textPassword"
                android:paddingStart="10sp"
                android:textColor="#000000"
                android:textColorHint="#66000000"
                app:layout_widthPercent="80%"
                app:layout_aspectRatio="914%"
                android:layout_centerHorizontal="true"
                app:layout_marginTopPercent="2%"
                android:imeOptions="actionNext"/>

            <EditText
                android:id="@+id/createaccount3confirmpassword"
                android:layout_below="@id/createaccount3password"
                android:background="@drawable/typeinbox"
                android:ems="7"
                android:hint="@string/confirmnewpassword"
                android:inputType="textPassword"
                android:paddingStart="10sp"
                android:textColor="#000000"
                android:textColorHint="#66000000"
                app:layout_widthPercent="80%"
                app:layout_aspectRatio="914%"
                android:layout_centerHorizontal="true"
                app:layout_marginTopPercent="2%"
                android:imeOptions="actionDone"/>



            <Button
                android:id="@+id/createaccount3signup"
                app:layout_widthPercent="45%"
                app:layout_aspectRatio="300%"
                app:layout_marginTopPercent="4%"
                android:layout_below="@id/createaccount3confirmpassword"
                android:layout_centerHorizontal="true"
                android:background="@drawable/loginbuttom"
                android:textAllCaps="false"
                android:text="@string/signup"
                android:textSize="27sp"
                android:onClick="mainpage"
                />

            <Button
                android:id="@+id/createaccount3back"
                android:layout_below="@id/createaccount3signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:textAllCaps="false"
                android:text="@string/back"
                android:layout_centerHorizontal="true"
                android:textSize="16sp"
                android:onClick="createaccount3back"
                />






        </android.support.percent.PercentRelativeLayout>

    </FrameLayout>

</android.support.percent.PercentRelativeLayout>