<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <FrameLayout
        android:id="@+id/forgotpasswordframe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/testbackground1"
        android:backgroundTint="#30000000"
        android:backgroundTintMode="src_over"
        android:onClick="empty1">

        <android.support.percent.PercentRelativeLayout
            android:id="@+id/forgotpasswordlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
        <android.support.percent.PercentRelativeLayout
            android:id="@+id/forgotmessagelayout"
            android:layout_width="match_parent"
            android:layout_height="25sp"
            app:layout_marginTopPercent="8%"
            >
            <TextView
                android:id="@+id/forgetmessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginmessage"
                android:textColor="#FFFFFF"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                />

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/informationcommentline1"
                android:background="#FFFFFF"
                android:layout_height="1dp"
                app:layout_widthPercent="25%"
                android:layout_toEndOf="@+id/forgetmessage"
                app:layout_marginLeftPercent="2%"
                android:layout_centerVertical="true"
                />
            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/informationcommentline2"
                android:background="#FFFFFF"
                android:layout_height="1dp"
                app:layout_widthPercent="25%"
                android:layout_toStartOf="@+id/forgetmessage"
                app:layout_marginRightPercent="2%"
                android:layout_centerVertical="true"
                />
        </android.support.percent.PercentRelativeLayout>

            <EditText
                android:id="@+id/forgetmail"
                app:layout_widthPercent="80%"
                app:layout_aspectRatio="900%"
                android:layout_below="@id/forgotmessagelayout"
                app:layout_marginTopPercent="3%"
                android:layout_centerHorizontal="true"
                android:ems="7"
                android:hint="@string/email"
                android:textColorHint="#66000000"
                android:textColor="#000000"
                android:background="@drawable/typeinbox"
                android:paddingStart="10sp"
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/sendcode"
                app:layout_widthPercent="45%"
                app:layout_aspectRatio="300%"
                app:layout_marginTopPercent="3%"
                android:layout_below="@id/forgetmail"
                android:layout_centerHorizontal="true"
                android:background="@drawable/loginbuttom"
                android:textAllCaps="false"
                android:text="@string/sendcode"
                android:textSize="27sp"
                android:onClick="loginpage"
                />

            <Button
                android:id="@+id/forgotlogin"
                android:layout_below="@id/sendcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:textAllCaps="false"
                android:text="@string/loginhere"
                android:layout_centerHorizontal="true"
                android:textSize="16sp"
                android:onClick="loginpage"
                />






        </android.support.percent.PercentRelativeLayout>

    </FrameLayout>

</android.support.percent.PercentRelativeLayout>